# diffgeo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  diffgeo.sln  diffgeo.vcxproj
example/: generalised_helix.cpp  helix_torus.cpp  paraboloid_curve_length.cpp
src/curve/: circumference.h  curve.h  curve_interface.h  line.h  unit_curve.h
src/forms/: first_fundamental_form.h  second_fundamental_form.h  two_form_interface.h  vector_field.h
src/surface/: plane.h  sphere.h  surface.h
src/utils/: maths.h  operations.h  real_function.h  type_traits.h  vector_expression.h
src/vector/: operations.h  vector.h  vector_expression.h
